fixed layout issue for sso bypass on registration form

--- a/app/assets/stylesheets/dmptool/_sso_bypass.scss
+++ b/app/assets/stylesheets/dmptool/_sso_bypass.scss
@@ -1,5 +1,5 @@
 // Styling for the SSO bypass link found in the sign in/up block
-#sign-in-bypass-sso {
+#sign-in-bypass-sso, #sign-up-bypass-sso {
   margin-left: auto;
   margin-top: 2px;
 }
